deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: 6-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: httpd:latest  # The Apache HTTPD image
          ports:
            - name: http
              containerPort: 80  # Apache listens on port 80 inside the container
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
