service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: 6-example
spec:
  type: ClusterIP
  ports:
    - port: 80         # Expose the service on port 80
      targetPort: 80    # Forward traffic to port 80 inside the container
  selector:
    app: httpd
